force-app/main/default/objects/Course_Registration__c/fields/Secondary_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email_Address__c</fullName>
    <label>Alternate Contact Email Address</label>
    <type>Email</type>
</CustomField>