force-app/main/default/objects/Course_Registration__c/fields/Secondary_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Mobile__c</fullName>
    <label>Alternate Contact Mobile</label>
    <type>Phone</type>
</CustomField>