force-app/main/default/objects/Course_Registration__c/fields/Secondary_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>