force-app/main/default/objects/Course_Registration__c/fields/Secondary_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Salutation__c</fullName>
    <label>Alternate Contact Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Mdm</fullName>
            </value>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Mrs</fullName>
            </value>
            <value>
                <fullName>Ms</fullName>
            </value>
            <value>
                <fullName>Prof.</fullName>
            </value>
            <value>
                <fullName>Rev.</fullName>
            </value>
            <value>
                <fullName>Sir Dr.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>