force-app/main/default/objects/Course_Registration__c/fields/Self_Registration__c.field-meta.xml
<CustomField>
    <fullName>Self_Registration__c</fullName>
    <formula>$User.ContactId=Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Self Registration?</label>
    <type>Checkbox</type>
</CustomField>