force-app/main/default/objects/Course_Registration__c/fields/Send_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MVP1.0 Please check this Box to initiate a Survey Invitation</description>
    <inlineHelpText>Please check this Box to initiate a Survey Invitation</inlineHelpText>
    <label>Send Survey</label>
    <type>Checkbox</type>
</CustomField>