force-app/main/default/objects/Course_Registration__c/fields/SPOC_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>SPOC_Contact_Number__c</fullName>
    <formula>Parent_Registration__r.Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPOC Contact Number</label>
    <type>Text</type>
</CustomField>