force-app/main/default/objects/Course_Registration__c/fields/SPOC_Email__c.field-meta.xml
<CustomField>
    <fullName>SPOC_Email__c</fullName>
    <formula>Parent_Registration__r.Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPOC Email</label>
    <type>Text</type>
</CustomField>