force-app/main/default/objects/Course_Registration__c/fields/SPOC_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>SPOC_Job_Title__c</fullName>
    <formula>Parent_Registration__r.Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPOC Job Title</label>
    <type>Text</type>
</CustomField>