force-app/main/default/objects/Course_Registration__c/fields/SPOC_Name__c.field-meta.xml
<CustomField>
    <fullName>SPOC_Name__c</fullName>
    <formula>Parent_Registration__r.Contact__r.FirstName &amp; &quot; &quot; &amp; Parent_Registration__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPOC Name</label>
    <type>Text</type>
</CustomField>