force-app/main/default/objects/Course_Registration__c/fields/Survey_Expiration_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Survey_Expiration_Date_Time__c</fullName>
    <description>MVP1.0 - Select the Date and Time by when the Survey Invitation expires!</description>
    <inlineHelpText>Select the Date and Time by when the Survey Invitation expires!</inlineHelpText>
    <label>Survey Expiration Date/Time</label>
    <type>DateTime</type>
</CustomField>