force-app/main/default/objects/Course_Registration__c/fields/Survey_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sent_On__c</fullName>
    <description>MVP1.0 Select the Date/Time when the Survey needs to be Sent</description>
    <inlineHelpText>Select the Date/Time when the Survey needs to be Sent</inlineHelpText>
    <label>Survey Sent On</label>
    <type>DateTime</type>
</CustomField>