force-app/main/default/objects/Course_Registration__c/fields/Sync_Learner_s_Record__c.field-meta.xml
<CustomField>
    <fullName>Sync_Learner_s_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MVP1.0 - Check this field to Sync Back the Course Registration fields to the Learner&apos;s Profile</description>
    <inlineHelpText>Check this field to Sync Back the Course Registration fields to the Learner&apos;s Profile</inlineHelpText>
    <label>Sync Learner&apos;s Record</label>
    <type>Checkbox</type>
</CustomField>