force-app/main/default/objects/Course_Registration__c/recordTypes/Course_Registration.recordType-meta.xml
<RecordType>
    <fullName>Course_Registration</fullName>
    <active>true</active>
    <description>Course Registeration</description>
    <label>Course Registration</label>
</RecordType>