force-app/main/default/objects/Course_Registration__c/recordTypes/Master_Course_Registration.recordType-meta.xml
<RecordType>
    <fullName>Master_Course_Registration</fullName>
    <active>true</active>
    <description>Master Course Registration</description>
    <label>Master Course Registration</label>
</RecordType>