force-app/main/default/objects/Course_Registration__c/validationRules/NRICValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>NRICValidation</fullName>
    <active>true</active>
    <errorConditionFormula>IF((ISPICKVAL( NRIC_Type__c , &apos;Singapore Citizen/PR&apos;) || ISPICKVAL( NRIC_Type__c , &apos;FIN&apos;)) &amp;&amp; LEN(NRIC__c ) != 0 ,
NOT(REGEX( NRIC__c , &quot;[S F T G][0-9]{7}[A-Z]&quot;)),
false )</errorConditionFormula>
    <errorMessage>Enter Valid NRIC/FIN value</errorMessage>
</ValidationRule>