force-app/main/default/objects/Course_Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Title__c</columns>
    <columns>Company_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Course_Run_Id__c</columns>
    <columns>Registration_Status__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Alternative_Email__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Need_User_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Course_Title__c</field>
        <operation>contains</operation>
    </filters>
    <label>All</label>
</ListView>