force-app/main/default/objects/Course_Registration__c/listViews/All_Community_Users.listView-meta.xml
<ListView>
    <fullName>All_Community_Users</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Course_Run_Id__c</columns>
    <columns>Contact__c</columns>
    <columns>Registration_Status__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Email_Address__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Self_Registration__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Course_Registration__c.Course_Registration</value>
    </filters>
    <label>All</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
    </sharedTo>
</ListView>