force-app/main/default/objects/Course_Registration__c/listViews/Completed.listView-meta.xml
<ListView>
    <fullName>Completed</fullName>
    <columns>NAME</columns>
    <columns>Course_Title__c</columns>
    <columns>Contact__c</columns>
    <columns>Course_Run_Id__c</columns>
    <columns>Registration_Status__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Community_Contact_s_Registration__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Registration_Status__c</field>
        <operation>equals</operation>
        <value>Confirmed,Cancelled,Deferred,Withdrawn</value>
    </filters>
    <label>Completed</label>
</ListView>