force-app/main/default/objects/Course_Registration__c/listViews/In_Progress.listView-meta.xml
<ListView>
    <fullName>In_Progress</fullName>
    <columns>NAME</columns>
    <columns>Course_Title__c</columns>
    <columns>Contact__c</columns>
    <columns>Course_Run_Id__c</columns>
    <columns>Registration_Status__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Registration_Status__c</field>
        <operation>equals</operation>
        <value>Draft,New</value>
    </filters>
    <label>In Progress</label>
</ListView>