force-app/main/default/objects/Course_Registration__c/listViews/Individual_Registrations.listView-meta.xml
<ListView>
    <fullName>Individual_Registrations</fullName>
    <columns>NAME</columns>
    <columns>Course_Name__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>Course_Run_Id__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>Individual Registrations</label>
</ListView>