force-app/main/default/objects/Course_Registration__c/listViews/Membership_Status_as_New.listView-meta.xml
<ListView>
    <fullName>Membership_Status_as_New</fullName>
    <columns>IsMember__c</columns>
    <columns>NAME</columns>
    <columns>Course_Title__c</columns>
    <columns>Course_Run_Id__c</columns>
    <columns>Registration_Status__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Company_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsMember__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Registration_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Membership Status as New</label>
</ListView>