force-app/main/default/objects/Course_Registration__c/listViews/My_Courses.listView-meta.xml
<ListView>
    <fullName>My_Courses</fullName>
    <columns>Contact__c</columns>
    <columns>NAME</columns>
    <columns>Course_Run_Id__c</columns>
    <columns>Registration_Status__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>My Courses</label>
</ListView>