force-app/main/default/objects/Course_Registration__c/listViews/Today_s_Registrations.listView-meta.xml
<ListView>
    <fullName>Today_s_Registrations</fullName>
    <columns>NAME</columns>
    <columns>Course_Name__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>Course_Run_Id__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Secondary_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Registrations</label>
</ListView>